[package]
name = "mpz_ts_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = { version = "0.6.5", serialize_maps_as_objects = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.4", features = ["console"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

serio = { version = "0.1", features = ["codec", "bincode"] }
futures = "0.3"
mpz-common = { path = "/Users/dev/workspaces/ethf/mpz/crates/mpz-common" }
anyhow = "1"
mpz-garble = { path = "/Users/dev/workspaces/ethf/mpz/crates/mpz-garble" }
mpz-ot = { path = "/Users/dev/workspaces/ethf/mpz/crates/mpz-ot" }
mpz-circuits = { path = "/Users/dev/workspaces/ethf/mpz/crates/mpz-circuits" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-rayon = "1.2"
