[package]
name = "mpz_ts_wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = { version = "0.6.5", serialize_maps_as_objects = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3.4", features = ["console"] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.7"

serio = { version = "0.1", features = ["codec", "bincode"] }
futures = "0.3"
mpz-common = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
anyhow = "1"
mpz-garble = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-ot = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
mpz-circuits = { git = "https://github.com/privacy-scaling-explorations/mpz", rev = "b8ae7ac" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
wasm-bindgen-rayon = "1.2"

thiserror = "1.0"
bristol-circuit = { git = "https://github.com/voltrevo/bristol-circuit", rev = "de761f7" }
